--- a/explore.css
+++ b/explore.css
@@ -6,7 +6,7 @@
     text-align: center;
     color: white;
     background-color: #667963;
-    padding: 40px 40px;
+    padding: 80px 100px;
     animation: exploreTextFadeIn 1.3s 0.3s cubic-bezier(0.5, 0, .2, 1) forwards;
 }
 
@@ -20,10 +20,6 @@
         transform: translateY(0%);
         opacity: 1;
     }
-}
-
-.contactDivider2{
-    align-
 }
 
 .contactDivider{
@@ -41,7 +37,7 @@
     position: relative;
     width: 100vw;
     height: 37vw;
-    animation: fadeInImage 1.5s 0.7s cubic-bezier(0.5, 0, .2, 1) both;
+    animation: FadeInpianoOctave 1.5s 0.7s cubic-bezier(0.5, 0, .2, 1) both;
 }
 
 @keyframes FadeInpianoOctave{
@@ -70,6 +66,19 @@
     border: 2px solid #bbb;
     box-sizing: border-box;
     border-radius: 0 0 10px 10px;
+    opacity: 0;
+    animation: keyFadeIn 1.1s 1.1s cubic-bezier(0.5, 0, .2, 1) forwards;
+}
+
+@keyframes keyFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .blackKeysContainer {
@@ -86,6 +95,8 @@
     height: 20vw;    background: #222;
     border-radius: 0 0 8px 8px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    opacity: 0;
+    animation: keyFadeIn 1.1s 1.1s cubic-bezier(0.5, 0, .2, 1) forwards;
 }
 
 .whiteKey.active {
