--- a/frontpage.css
+++ b/frontpage.css
@@ -164,7 +164,7 @@ body, html {
     opacity: 0;
     animation: firstDescriptionFadeIn 1.2s 0.7s cubic-bezier(0.5, 0, .2, 1) forwards;
     font-family: "Antic Didone", serif;
-    font-weight: 50px;
+    font-weight: 400;
 }
 
 @keyframes firstDescriptionFadeIn {
@@ -270,8 +270,7 @@ body, html {
         left: 0;
         top: 0;
         font-family: "Schibsted Grotesk", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: <weight>;
+        font-weight: 400;
         font-style: normal;
     }
 
@@ -314,7 +313,7 @@ body, html {
         object-fit:cover;
         border-radius:12px;
         border:3px solid #b4c7c0;
-        background:#eaeaea;"
+        background:#eaeaea;
     }
 }
 
